# client_python

./: .gitignore  .readthedocs.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  quickstart.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
api_reference/: Makefile  README.md  make.bat
api_reference/source/_static/: custom.css
api_reference/source/api/: logger.rst
arize/: __init__.py  api.py  bounded_executor.py  input_transformer.py  model.py  protocol_pb2.py  public_pb2.py  simple_queue.py  types.py  utils.py  validation_helper.py  version.py
arize/examples/: async_client.py  bulk_client.py  bulk_client_shap.py  client.py  client_shap_values.py  log_client.py  log_pandas_dataframe.py  preproduction_client.py
arize/examples/Jupiter Notebooks/: Algorithmia.ipynb  Databricks_MLFlow_AzureML.ipynb  Sagemaker_xgboost.ipynb  Tensorflow.ipynb
arize/examples/tutorials/: Arize_HelloWorld_classification.ipynb  Arize_Tutorial_Algorithmia.ipynb  Arize_Tutorial_Algorithmia_Integration.ipynb  Arize_Tutorial_Algorithmia_Integration_v2.ipynb  Arize_Tutorial_Binary_Breast_Cancer.ipynb  Arize_Tutorial_Boston_House_Prices.ipynb  Arize_Tutorial_Databricks_MLFlow_AzureML.ipynb  Arize_Tutorial_Delayed_Actuals.ipynb  Arize_Tutorial_Fraud_Classification_Binary.ipynb  Arize_Tutorial_Fuel_Efficiency_Tensorflow_Regression.ipynb  Arize_Tutorial_Lending_Club_Risk_Binary.ipynb  Arize_Tutorial_Log_Binary_Breast_Cancer.ipynb  Arize_Tutorial_Log_MultiClass_Wine_Quality.ipynb  Arize_Tutorial_Log_Regression_Boston_House_Prices.ipynb  Arize_Tutorial_Log_Score_Categorical_Breast_Cancer.ipynb  Arize_Tutorial_MultiClass_Wine_Quality.ipynb  Arize_Tutorial_Pred_Everything.ipynb  Arize_Tutorial_PyTorch_Multi_class_Classification_Wine_Quality.ipynb  Arize_Tutorial_Regression_Boston_House_Prices.ipynb  Arize_Tutorial_SHAP.ipynb  Arize_Tutorial_Sagemaker_xgboost.ipynb  Arize_Tutorial_Score_Categorical_Breast_Cancer.ipynb  Arize_Tutorial_Tensorflow_Classification.ipynb  My_First_Dummy_Model.ipynb  My_First_KPI_Monitoring_Integration.ipynb  SHAP_Tutorial_Base_Version.ipynb  UI_Download_Persist.ipynb  UI_Download_URL.ipynb
arize/experimental/datasets/: __init__.py  requests_pb2.py
arize/exporter/: README.md  publicexporter_pb2.py
arize/exporter/core/: client.py  endpoint.py  query.py  session.py
arize/exporter/utils/: constants.py  errors.py  schema_parser.py  tracing.py  validation.py
arize/pandas/: logger.py
arize/pandas/embeddings/: __init__.py  auto_generator.py  base_generators.py  constants.py  cv_generators.py  errors.py  models.py  nlp_generators.py  tabular_generators.py  usecases.py
arize/pandas/etl/: casting.py  errors.py
arize/pandas/surrogate_explainer/: mimic.py
arize/pandas/tracing/: columns.py  constants.py  types.py  utils.py
arize/pandas/validation/: errors.py  validator.py
arize/single_log/: casting.py
arize/utils/: constants.py  errors.py  logging.py  model_mapping.json  proto.py  types.py  utils.py
arizeai/: api.py
arizeai/examples/: async_client.py  client.py
docs/: .gitignore  Makefile  README.md  requirements.txt
docs/source/: ai_integrations.md  annotation_configs.md  annotation_queues.md  api_keys.md  client.md  conf.py  config.md  datasets.md  embeddings.md  evaluators.md  experiments.md  index.md  index.rst  ml.md  organizations.md  projects.md  prompts.md  resource_restrictions.md  role_bindings.md  roles.md  spaces.md  spans.md  tasks.md  users.md
docs/source/_static/: custom.css  right-sidebar.css  switcher.json  toc-cleanup.js
docs/source/_templates/: custom-left-navbar.html  custom-tabs.html  custom_sidebar.html  navbar-mid.html
docs/source/api/: batch_logger.rst  datasets.rst  experiments.rst  exporter.rst  stream_logger.rst
docs/source/llm-api/: datasets.rst  evaluators.rst  logger.rst  types.rst
docs/source/ml-api/: exporter.rst  logger.rst
src/: .openapi-generator-ignore
src/.openapi-generator/: FILES
src/arize/: __init__.py  _client_factory.py  _env.py  _headers.py  _lazy.py  _utils.py  api.py  bounded_executor.py  client.py  config.py  deprecated.py  logging.py  pre_releases.py  public_pb2.py  regions.py  version.py
src/arize/_exporter/: client.py  validation.py
src/arize/_flight/: client.py  types.py
src/arize/_generated/: api_client_README.md
src/arize/ai_integrations/: __init__.py  client.py  types.py
src/arize/annotation_configs/: __init__.py  client.py  types.py
src/arize/annotation_queues/: __init__.py  client.py  types.py
src/arize/api_keys/: __init__.py  client.py  types.py
src/arize/audit_logs/: __init__.py  client.py  types.py
src/arize/constants/: __init__.py  config.py  ml.py  openinference.py  pyarrow.py  spans.py
src/arize/datasets/: __init__.py  client.py  errors.py  (+2 more)
testing_notebooks/: spans_data.parquet  test_annotation_configs.ipynb  test_autoembeddings.py  test_datasets.ipynb  test_experiments.ipynb  test_log_ml_batch.ipynb  test_log_ml_batch.py  test_log_ml_stream.ipynb  test_log_ml_stream.py  test_log_spans_v7.ipynb  test_log_spans_v8.ipynb  test_log_spans_v8.py
tests/: conftest.py  extension_test.py  test_api.py  test_utils.py
tests/fixtures/: mpg.csv
tests/integration/: test_annotation_configs_flows.py  test_api_keys_flows.py  test_dataset_annotations_flows.py  test_datasets_flows.py  test_evaluators_flows.py  test_experiment_annotations_flows.py  test_organizations_flows.py  test_projects_flows.py  test_prompts_flows.py  test_resolve.py  test_resource_restrictions.py  test_role_bindings.py  test_roles_flows.py  test_tasks_flows.py  test_users_flows.py
tests/pandas/: test_pandas_logger.py  test_pandas_schema_default_values.py  test_pandas_unknown_types.py
tests/single_log/: test_casting.py
tests/types/: test_embedding_types.py  test_multi_class_types.py  test_type_helpers.py
tests/unit/: test_arize_client.py  test_client.py  test_client_factory.py  test_config.py  test_deprecated.py  test_init.py  test_lazy.py  test_logging.py  test_pre_releases.py
(+1944 files in other folders)
