[bdist_wheel]
universal = 1

[metadata]
name = arize
version = attr: arize.__version__
description = A helper library to interact with Arize AI APIs
long_description = file: README.md
long_description_content_type = text/markdown
homepage = https://github.com/Arize-ai/client_python
project_urls =
    Arize AI = https://www.arize.com
author = Arize AI
author_email = support@arize.com
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: System :: Monitoring
keywords = arize

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests_futures==1.0.0
    googleapis_common_protos~=1.51
    protobuf~=3.12
    pandas>=0.25.3,<2
    pyarrow>=5.0.0
    dataclasses>=0.6;python_version<"3.7"

[options.extras_require]
MimicExplainer = 
    numpy<=1.21.0
    scikit-learn>=0.12.0
    interpret>=0.2.7
    interpret-community>=0.22.0
    lightgbm>=2.2.3

[options.packages.find]
exclude = docs, tests*
