[bdist_wheel]
universal = 1

[metadata]
name = arize
version = attr: arize.__version__
description = A helper library to interact with Arize AI APIs
long_description = file: README.md
long_description_content_type = text/markdown
homepage = https://github.com/Arize-ai/client_python
project_urls =
    Arize AI = https://www.arize.com
author = Arize AI
author_email = support@arize.com
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: System :: Monitoring
keywords = arize

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests_futures==1.0.0
    googleapis_common_protos~=1.51
    protobuf>=3.12,<5
    pandas>=0.25.3,<3
    pyarrow>=0.15.0
    tqdm>=4.60.0,<5

[options.extras_require]
MimicExplainer =
    interpret-community[mimic]>=0.22.0,<1
AutoEmbeddings =
    transformers>=4.25, <5
    tokenizers>=0.13, <1
    datasets>=2.8, <3, !=2.14.*
    torch>=1.13, <3
    Pillow>=8.4.0, <11
NLP_Metrics =
    nltk>=3.0.0, <4
    sacrebleu>=2.3.1, <3
    rouge-score>=0.1.2, <1
    evaluate>=0.3, <1
    datasets!=2.14.*
# To be removed in version 8 in favor of NLP_Metrics
LLM_Evaluation =
    nltk>=3.0.0, <4
    sacrebleu>=2.3.1, <3
    rouge-score>=0.1.2, <1
    evaluate>=0.3, <1
    datasets!=2.14.*
Tracing =
    opentelemetry-semantic-conventions>=0.43b0, <1
    openinference-semantic-conventions>=0.1.6, <1
    deprecated #opentelemetry-semantic-conventions requires it
Datasets =
    typing-extensions>=4, <5
    wrapt>=1.12.1, <2
    opentelemetry-semantic-conventions>=0.43b0, <1
    openinference-semantic-conventions>=0.1.6, <1
    deprecated #opentelemetry-semantic-conventions requires it

[options.packages.find]
exclude = docs, tests*
